Upgrade Java to 21 with OpenRewrite recipe